--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         text-align: center;
         z-index: 1000;
     }
+    .floating-contact-box h4 {
+    color: white; /* Делаем текст белым */
+    margin-bottom: 10px;
+    }
     .floating-contact-box a {
         color: white;
         text-decoration: none;
