--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   data-param-id="4"
                   data-param-type="image"
 
-                                      src="8a7d96c8116bd648657a8d5c060b90fc601a7f4f.jpg"
+                                      src="логотип.jpg"
                                     alt="" />
 
               <img class="logo-light"
@@ -66,7 +66,7 @@
                    data-param-id="4"
                    data-param-type="image"
 
-                                          src="8a7d96c8116bd648657a8d5c060b90fc601a7f4f.jpg"
+                                          src="логотип.jpg"
                                       alt=""/>
             </a>
           </div>
