--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         text-decoration: underline;
     }
 </style>
-		<meta name="selfwork.ru" content="f5OWh5JfG1AITvxXXpozbwDg6bhKJdrdetsmpLx5dSGAFAi1Vf" />
+		/* <meta name="selfwork.ru" content="f5OWh5JfG1AITvxXXpozbwDg6bhKJdrdetsmpLx5dSGAFAi1Vf" /> */
 	</head>
 	<body data-site-id="">
 				<div class="content-wrapper">
