--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 		<meta name="keywords" content="">
 		<meta name="author" content="">
 		<title></title>
-		<link rel="shortcut icon" href="/favicon.ico">
+		
 		<link rel="stylesheet" href="assets/css/plugins.css">
 		<link rel="stylesheet" href="assets/css/style.css?1">
 		<link rel="stylesheet" href="assets/css/colors/sky.css">
-		
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+                <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+                <link rel="manifest" href="/site.webmanifest">
 		<style>
     /* Стили для плавающего окна */
     .floating-contact-box {
