--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="">
 		<meta name="author" content="">
 		<title></title>
-		
+		<link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 		<link rel="stylesheet" href="assets/css/plugins.css">
 		<link rel="stylesheet" href="assets/css/style.css?1">
 		<link rel="stylesheet" href="assets/css/colors/sky.css">
