--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                          style="max-width: 120px"
                          data-param-id="4"
                          data-param-type="image"
-                                                    src="8a7d96c8116bd648657a8d5c060b90fc601a7f4f.jpg"
+                                                    src="логотип.jpg"
                                                  alt=""/>
                                                  <p class="mb-4">Этот лендинг был создан Ворониным Максимом.</p>
                     <nav class="nav social social-white">
@@ -549,7 +549,12 @@
             <div class="col-md-4 col-lg-3">
                 <div class="widget">
                     <h4 class="widget-title text-white mb-3" data-param-id="111" data-param-type="text">Связаться с нами</h4>
-                                            <address class="pe-xl-15 pe-xxl-17" data-param-id="8" data-param-type="text">Центральная ул., 3, село Совхоз Боровский</address>
+<p>
+    <a href="https://yandex.ru/maps/?text=Центральная ул., 3, село Совхоз Боровский" 
+       target="_blank">
+       📍 Центральная ул., 3, село Совхоз Боровский
+    </a>
+</p>
                                         <a href="mailto:email@example.ex" data-param-id=6 data-param-type="text">email@example.ex</a>                    <br/><a href="tel:+79092502221" data-param-id="5" data-param-type="text">+79092502221</a>                </div>
                 <!-- /.widget -->
             </div>
