--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!doctype html>
+mmmmmmmmmmmmmmmmmm	<!doctype html>
 	<html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -484,7 +484,12 @@
                     </div>
                     <div>
                       <h5 class="mb-1" data-param-id="132">Адрес</h5>
-                      <address data-param-id="8" data-param-type="text">Центральная ул., 3, село Совхоз Боровский</address>
+                      <p>
+    <a href="https://yandex.ru/maps/?text=Центральная ул., 3, село Совхоз Боровский" 
+       target="_blank">
+       📍 Центральная ул., 3, село Совхоз Боровский
+    </a>
+</p>
                     </div>
                   </div>
                                                       <div class="d-flex flex-row">
