--- a/index.html
+++ b/index.html
@@ -303,26 +303,26 @@
               <div class="row align-items-center counter-wrapper gy-6 text-center">
                 <div class="col-md-3">
                   <img src="assets/img/icons/lineal/check.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="81" data-param-type="text">7518</h3>
-                  <p data-param-id="54-0" data-param-type="text">Уровень подготовки</p>
+                  <h3 class="counter" data-param-id="81" data-param-type="text">100</h3>
+                  <p data-param-id="54-0" data-param-type="text">Процентный уровень подготовки!</p>
                 </div>
                 <!--/column -->
                 <div class="col-md-3">
                   <img src="assets/img/icons/lineal/user.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="82" data-param-type="text">3472</h3>
-                  <p data-param-id="54-1" data-param-type="text">Участие в мероприятиях</p>
+                  <h3 class="counter" data-param-id="82" data-param-type="text">346</h3>
+                  <p data-param-id="54-1" data-param-type="text">Участников спортивных мероприятий</p>
                 </div>
                 <!--/column -->
                 <div class="col-md-3">
                   <img src="assets/img/icons/lineal/briefcase-2.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="83" data-param-type="text">4537</h3>
-                  <p data-param-id="54-2" data-param-type="text">Уровень удовлетворенности участников</p>
+                  <h3 class="counter" data-param-id="83" data-param-type="text">100</h3>
+                  <p data-param-id="54-2" data-param-type="text">Процентный уровень удовлетворенности участников</p>
                 </div>
                 <!--/column -->
                 <div class="col-md-3">
                   <img src="assets/img/icons/lineal/award-2.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="84" data-param-type="text">2184</h3>
-                  <p data-param-id="54-3" data-param-type="text">Количество новых членов клуба</p>
+                  <h3 class="counter" data-param-id="84" data-param-type="text">218</h3>
+                  <p data-param-id="54-3" data-param-type="text">Количество членов клуба</p>
                 </div>
                 <!--/column -->
               </div>
