--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                          data-param-type="image"
                                                     src="логотип.jpg"
                                                  alt=""/>
-                                                 <p class="mb-4">Этот лендинг был создан Ворониным Максимом.</p>
+                                                 <p class="mb-4">Made by War_on_in .</p>
                     <nav class="nav social social-white">
                                                                                                                         
                                                                                             </nav>
@@ -606,9 +606,9 @@
     </div>
     <div class="contact-content">
         <p><a href="tel:+79092502221">+7 909 250 2221</a></p>
-        <p><a href="mailto:email@example.ex">email@example.ex</a></p>
+        <p><a href="mailto:anospkpride@ya.ru">email@example.ex</a></p>
         <p><a href="https://t.me/ano_spk_prayd">Telegram</a></p>
-        <p><a href="https://vk.com/example">VK</a></p>
+        <p><a href="https://vk.com/club229427609">VK</a></p>
     </div>
 </div>		
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
