--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                     </div>
                     <div>
                       <h5 class="mb-1" data-param-id="134">E-mail</h5>
-                      <p class="mb-0"><a href="mailto:email@example.ex" data-param-id=6 data-param-type="text" class="link-body">email@example.ex</a></p>
+                      <p class="mb-0"><a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text" class="link-body">anospkpride@ya.ru</a></p>
                     </div>
                   </div>
                                   </div>
@@ -560,7 +560,7 @@
        📍 Центральная ул., 3, село Совхоз Боровский
     </a>
 </p>
-                                        <a href="mailto:email@example.ex" data-param-id=6 data-param-type="text">email@example.ex</a>                    <br/><a href="tel:+79092502221" data-param-id="5" data-param-type="text">+79092502221</a>                </div>
+                                        <a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text">anospkpride@ya.ru</a>                    <br/><a href="tel:+79092502221" data-param-id="5" data-param-type="text">+79092502221</a>                </div>
                 <!-- /.widget -->
             </div>
             <!-- /column -->
@@ -606,7 +606,7 @@
     </div>
     <div class="contact-content">
         <p><a href="tel:+79092502221">+7 909 250 2221</a></p>
-        <p><a href="mailto:anospkpride@ya.ru">email@example.ex</a></p>
+        <p><a href="mailto:anospkpride@ya.ru">anospkpride@ya.ru</a></p>
         <p><a href="https://t.me/ano_spk_prayd">Telegram</a></p>
         <p><a href="https://vk.com/club229427609">VK</a></p>
     </div>
