--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@
         📞 Контакты
     </div>
     <div class="contact-content">
-        <p><a href="tel:+79092502221">+7 909 250 2221</a></p>
-        <p><a href="mailto:anospkpride@ya.ru">anospkpride@ya.ru</a></p>
+        <p><a href="tel:+79092502221">Телефон</a></p>
+        <p><a href="mailto:anospkpride@ya.ru">Почта</a></p>
         <p><a href="https://t.me/ano_spk_prayd">Telegram</a></p>
         <p><a href="https://vk.com/club229427609">VK</a></p>
     </div>
