--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                       <p>
     <a href="https://yandex.ru/maps/?text=Центральная ул., 3, село Совхоз Боровский" 
        target="_blank">
-       📍 Центральная ул., 3, село Совхоз Боровский
+       Центральная ул., 3, село Совхоз Боровский
     </a>
 </p>
                     </div>
@@ -498,7 +498,7 @@
                     </div>
                     <div>
                       <h5 class="mb-1" data-param-id="133">Телефон</h5>
-                      <p><a href="tel:+79092502221" data-param-id="5" data-param-type="text">📞 +79092502221</a></p>
+                      <p><a href="tel:+79092502221" data-param-id="5" data-param-type="text">+79092502221</a></p>
                     </div>
                   </div>
                                                       <div class="d-flex flex-row">
@@ -507,7 +507,7 @@
                     </div>
                     <div>
                       <h5 class="mb-1" data-param-id="134">E-mail</h5>
-                      <p class="mb-0"><a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text" class="link-body">📧 anospkpride@ya.ru</a></p>
+                      <p class="mb-0"><a href="mailto:anospkpride@ya.ru" data-param-id=6 data-param-type="text" class="link-body">anospkpride@ya.ru</a></p>
                     </div>
                   </div>
                                   </div>
