--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   data-param-id="4"
                   data-param-type="image"
 
-                                      src="логотип.jpg"
+                                      src="цветспарашютом.jpg"
                                     alt="" />
 
               <img class="logo-light"
@@ -94,7 +94,7 @@
                    data-param-id="4"
                    data-param-type="image"
 
-                                          src="логотип.jpg"
+                                          src="цветспарашютом.jpg"
                                       alt=""/>
             </a>
           </div>
@@ -540,7 +540,7 @@
                          style="max-width: 120px"
                          data-param-id="4"
                          data-param-type="image"
-                                                    src="логотип.jpg"
+                                                    src="цветспарашютом.jpg"
                                                  alt=""/>
                                                  <p class="mb-4">Made by War_on_in .</p>
                     <nav class="nav social social-white">
