--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <div class="container py-14 py-md-16">
           <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
             <div class="col-lg-7 order-lg-2">
-              <figure><img class="w-auto" src="6e430949aa064f227364cf5f7f5496eff8f5e8f4.jpg" data-param-id="105" data-param-type="image"  alt="" /></figure>
+              <figure><img class="w-auto" src="oldVSyoung.jpg" data-param-id="105" data-param-type="image"  alt="" /></figure>
             </div>
             <!--/column -->
             <div class="col-lg-5">
@@ -381,7 +381,7 @@
         <div class="container py-14 py-md-16">
           <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
             <div class="col-lg-7">
-              <figure><img class="w-auto" src="6db542929852d7eedd52274ff16cf34a6c933afe.jpg" data-param-id="108" data-param-type="image"  alt="" /></figure>
+              <figure><img class="w-auto" src="desant.jpg" data-param-id="108" data-param-type="image"  alt="" /></figure>
             </div>
             <!--/column -->
             <div class="col-lg-5">
