--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
                 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
                 <link rel="manifest" href="/site.webmanifest">
 <style>
+	#gallery img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+#gallery img:hover {
+    transform: scale(1.05);
+}
+
     /* Стили для плавающего окна */
     .floating-contact-box {
         position: fixed;
@@ -296,45 +308,32 @@
   <!-- /section -->
 
     
-    <section id="facts" class="wrapper bg-light">
-        <div class="container py-14 py-md-16">
-          <div class="row">
-            <div class="col-xl-10 mx-auto">
-              <div class="row align-items-center counter-wrapper gy-6 text-center">
-                <div class="col-md-3">
-                  <img src="assets/img/icons/lineal/check.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="81" data-param-type="text">100</h3>
-                  <p data-param-id="54-0" data-param-type="text">Процентный уровень подготовки!</p>
-                </div>
-                <!--/column -->
-                <div class="col-md-3">
-                  <img src="assets/img/icons/lineal/user.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="82" data-param-type="text">346</h3>
-                  <p data-param-id="54-1" data-param-type="text">Участников спортивных мероприятий</p>
-                </div>
-                <!--/column -->
-                <div class="col-md-3">
-                  <img src="assets/img/icons/lineal/briefcase-2.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="83" data-param-type="text">100</h3>
-                  <p data-param-id="54-2" data-param-type="text">Процентный уровень удовлетворенности участников</p>
-                </div>
-                <!--/column -->
-                <div class="col-md-3">
-                  <img src="assets/img/icons/lineal/award-2.svg" class="svg-inject icon-svg icon-svg-lg text-primary mb-3" alt="" />
-                  <h3 class="counter" data-param-id="84" data-param-type="text">218</h3>
-                  <p data-param-id="54-3" data-param-type="text">Количество членов клуба</p>
-                </div>
-                <!--/column -->
-              </div>
-              <!--/.row -->
+   <section id="gallery" class="wrapper bg-light">
+    <div class="container py-14 py-md-16">
+        <h2 class="text-center mb-5">Фотогалерея</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="/gallery1.jpg" class="img-fluid rounded" alt="Галерея 1">
             </div>
-            <!-- /column -->
-          </div>
-          <!-- /.row -->
+            <div class="col-md-4">
+                <img src="/gallery2.jpg" class="img-fluid rounded" alt="Галерея 2">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery3.jpg" class="img-fluid rounded" alt="Галерея 3">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery4.jpg" class="img-fluid rounded" alt="Галерея 4">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery5.jpg" class="img-fluid rounded" alt="Галерея 5">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery6.jpg" class="img-fluid rounded" alt="Галерея 6">
+            </div>
         </div>
-        <!-- /.container -->
-      </section>
-      <!-- /section -->
+    </div>
+</section>
+
   
   
 
