--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="container pt-15 pt-md-17 pb-13 pb-md-15">
           <div class="row gx-md-8 gx-xl-12 gy-6 align-items-center">
             <div class="col-md-8 col-lg-6 order-lg-2 mx-auto">
-              <div class="img-mask mask-2"><img src="8a7d96c8116bd648657a8d5c060b90fc601a7f4f.jpg" data-param-id="99" data-param-type="image" alt="" /></div>
+              <div class="img-mask mask-2"><img src="pokolenie.jpg" data-param-id="99" data-param-type="image" alt="" /></div>
             </div>
             <!--/column -->
             <div class="col-lg-6">
@@ -380,7 +380,7 @@
         <div class="container py-14 py-md-16">
           <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
             <div class="col-lg-7">
-              <figure><img class="w-auto" src="desant.jpg" data-param-id="108" data-param-type="image"  alt="" /></figure>
+              <figure><img class="w-auto" src="gallery3.jpg" data-param-id="108" data-param-type="image"  alt="" /></figure>
             </div>
             <!--/column -->
             <div class="col-lg-5">
