--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <div class="container py-14 py-md-16">
           <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
             <div class="col-lg-7 order-lg-2">
-              <figure><img class="w-auto" src="oldVSyoung.jpg" data-param-id="105" data-param-type="image"  alt="" /></figure>
+              <figure><img class="w-auto" src="pokolenie.jpg" data-param-id="105" data-param-type="image"  alt="" /></figure>
             </div>
             <!--/column -->
             <div class="col-lg-5">
