--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title></title>
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="stylesheet" href="assets/css/plugins.css">
+		<link rel="stylesheet" href="assets/css/style.css">
 		<link rel="stylesheet" href="assets/css/style.css?1">
 		<link rel="stylesheet" href="assets/css/colors/sky.css">
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
