--- a/index.html
+++ b/index.html
@@ -295,18 +295,31 @@
 
     
   <section id="gallery" class="wrapper bg-light">
-        <div class="container py-14 py-md-16">
-            <h2 class="text-center mb-5">Фотогалерея</h2>
-            <div class="row">
-                <div class="col-md-4"><img src="/gallery1.jpg" alt="Галерея 1"></div>
-                <div class="col-md-4"><img src="/gallery2.jpg" alt="Галерея 2"></div>
-                <div class="col-md-4"><img src="/gallery3.jpg" alt="Галерея 3"></div>
-                <div class="col-md-4"><img src="/gallery4.jpg" alt="Галерея 4"></div>
-                <div class="col-md-4"><img src="/gallery5.jpg" alt="Галерея 5"></div>
-                <div class="col-md-4"><img src="/gallery6.jpg" alt="Галерея 6"></div>
+    <div class="container py-14 py-md-16">
+        <h2 class="text-center mb-5">Фотогалерея</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <img src="/gallery1.jpg" class="img-fluid rounded" alt="Галерея 1">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery2.jpg" class="img-fluid rounded" alt="Галерея 2">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery3.jpg" class="img-fluid rounded" alt="Галерея 3">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery4.jpg" class="img-fluid rounded" alt="Галерея 4">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery5.jpg" class="img-fluid rounded" alt="Галерея 5">
+            </div>
+            <div class="col-md-4">
+                <img src="/gallery6.jpg" class="img-fluid rounded" alt="Галерея 6">
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
 
   
