--- a/index.html
+++ b/index.html
@@ -299,22 +299,22 @@
         <h2 class="text-center mb-5">Фотогалерея</h2>
         <div class="row">
             <div class="col-md-4">
-                <img src="/gallery1.jpg" class="img-fluid rounded" alt="Галерея 1">
+                <img src="gallery1.jpg" class="img-fluid rounded" alt="Галерея 1">
             </div>
             <div class="col-md-4">
-                <img src="/gallery2.jpg" class="img-fluid rounded" alt="Галерея 2">
+                <img src="gallery2.jpg" class="img-fluid rounded" alt="Галерея 2">
             </div>
             <div class="col-md-4">
-                <img src="/gallery3.jpg" class="img-fluid rounded" alt="Галерея 3">
+                <img src="gallery3.jpg" class="img-fluid rounded" alt="Галерея 3">
             </div>
             <div class="col-md-4">
-                <img src="/gallery4.jpg" class="img-fluid rounded" alt="Галерея 4">
+                <img src="gallery4.jpg" class="img-fluid rounded" alt="Галерея 4">
             </div>
             <div class="col-md-4">
-                <img src="/gallery5.jpg" class="img-fluid rounded" alt="Галерея 5">
+                <img src="gallery5.jpg" class="img-fluid rounded" alt="Галерея 5">
             </div>
             <div class="col-md-4">
-                <img src="/gallery6.jpg" class="img-fluid rounded" alt="Галерея 6">
+                <img src="gallery6.jpg" class="img-fluid rounded" alt="Галерея 6">
             </div>
         </div>
     </div>
