--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="">
 		<meta name="author" content="">
 		<title></title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
 		<link rel="shortcut icon" href="/favicon.ico">
     		<link rel="stylesheet" href="assets/css/plugins.css">
     		<link rel="stylesheet" href="assets/css/style.css">
@@ -297,28 +298,21 @@
   <section id="gallery" class="wrapper bg-light">
     <div class="container py-14 py-md-16">
         <h2 class="text-center mb-5">Фотогалерея</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="gallery1.jpg" class="img-fluid rounded" alt="Галерея 1">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="gallery1.jpg" alt="Галерея 1"></div>
+                <div class="swiper-slide"><img src="gallery2.jpg" alt="Галерея 2"></div>
+                <div class="swiper-slide"><img src="gallery3.jpg" alt="Галерея 3"></div>
+                <div class="swiper-slide"><img src="gallery4.jpg" alt="Галерея 4"></div>
+                <div class="swiper-slide"><img src="gallery5.jpg" alt="Галерея 5"></div>
+                <div class="swiper-slide"><img src="gallery6.jpg" alt="Галерея 6"></div>
             </div>
-            <div class="col-md-4">
-                <img src="gallery2.jpg" class="img-fluid rounded" alt="Галерея 2">
-            </div>
-            <div class="col-md-4">
-                <img src="gallery3.jpg" class="img-fluid rounded" alt="Галерея 3">
-            </div>
-            <div class="col-md-4">
-                <img src="gallery4.jpg" class="img-fluid rounded" alt="Галерея 4">
-            </div>
-            <div class="col-md-4">
-                <img src="gallery5.jpg" class="img-fluid rounded" alt="Галерея 5">
-            </div>
-            <div class="col-md-4">
-                <img src="gallery6.jpg" class="img-fluid rounded" alt="Галерея 6">
-            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
     </div>
 </section>
+
 
 
 
@@ -615,6 +609,23 @@
         }
     });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 10,
+        loop: true,
+        autoplay: {
+            delay: 3000,
+            disableOnInteraction: false,
+        },
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+    });
+</script>
+
 </body>
 </html>
 
