--- a/index.html
+++ b/index.html
@@ -276,7 +276,11 @@
                 <div class="col-lg-8 mx-auto text-center">
                   <h2 class="fs-16 text-uppercase text-primary mb-3" data-param-id="18" data-param-type="text">Присоединяйся к десанту сегодня! Действуй!</h2>
                   <h3 class="display-4 mb-0" data-param-id="19" data-param-type="text">Присоединяйтесь к нашему спортивно-патриотическому клубу сегодня! Подавайте заявку сейчас!</h3>
-                </div>
+        	 </div>
+	    <div class="mt-4 text-center">
+    		  <a href="#contact" class="btn btn-lg btn-primary rounded-pill" data-param-id="76" data-param-type="text">Связаться с нами</a>
+		 </div>
+      
                 <!-- /column -->
               </div>
               <!-- /.row -->
