--- a/index.html
+++ b/index.html
@@ -317,11 +317,15 @@
     </div>
 </section>
 
-
-
-
-  
-  
+<section id="news" class="wrapper bg-light">
+    <div class="container py-14 py-md-16">
+        <h2 class="text-center mb-5">Новости</h2>
+        <div id="news-feed" class="news-list">
+            <p>Загружаем новости...</p>
+        </div>
+    </div>
+</section>
+ 
     <section id="features" class="wrapper bg-light">
         <div class="container py-14 py-md-16">
           <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
@@ -628,6 +632,45 @@
             prevEl: ".swiper-button-prev",
         },
     });
+</script>
+<script>
+    async function fetchRSS(url) {
+        const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(url)}`);
+        const data = await response.json();
+        return data.items;
+    }
+
+    async function loadNews() {
+        const newsContainer = document.getElementById("news-feed");
+        newsContainer.innerHTML = "<p>Загружаем...</p>";
+
+        const rssFeeds = [
+            "https://ria.ru/export/rss2/defense.xml",  // Новости армии (РИА)
+            "https://www.sport-express.ru/services/materials/news/se/sections/edinoborstva.xml", // Новости единоборств (Спорт-Экспресс)
+            "https://lenta.ru/rss/articles/army/" // Лента.ру (армия, оружие)
+        ];
+
+        let allNews = [];
+
+        for (const feed of rssFeeds) {
+            const news = await fetchRSS(feed);
+            allNews = allNews.concat(news);
+        }
+
+        // Сортируем по дате (новые сверху)
+        allNews.sort((a, b) => new Date(b.pubDate) - new Date(a.pubDate));
+
+        // Выводим только 5 свежих новостей
+        newsContainer.innerHTML = allNews.slice(0, 5).map(item => `
+            <div class="news-item">
+                <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
+                <p>${item.description.substring(0, 150)}...</p>
+                <small>${new Date(item.pubDate).toLocaleString()}</small>
+            </div>
+        `).join("");
+    }
+
+    document.addEventListener("DOMContentLoaded", loadNews);
 </script>
 
 </body>
