--- a/index.html
+++ b/index.html
@@ -635,9 +635,9 @@
 </script>
 <script>
     async function fetchRSS(url) {
-        const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(url)}`);
+        const response = await fetch(`https://rss-bridge.org/bridge/?action=display&bridge=RssBridge&format=Json&url=${encodeURIComponent(url)}`);
         const data = await response.json();
-        return data.items;
+        return data.items || [];
     }
 
     async function loadNews() {
@@ -645,26 +645,33 @@
         newsContainer.innerHTML = "<p>Загружаем...</p>";
 
         const rssFeeds = [
-            "https://ria.ru/export/rss2/defense.xml",  // Новости армии (РИА)
-            "https://www.sport-express.ru/services/materials/news/se/sections/edinoborstva.xml", // Новости единоборств (Спорт-Экспресс)
-            "https://lenta.ru/rss/articles/army/" // Лента.ру (армия, оружие)
+            "https://ria.ru/export/rss2/defense.xml",  
+            "https://www.sport-express.ru/services/materials/news/se/sections/edinoborstva.xml",  
+            "https://lenta.ru/rss/articles/army/"
         ];
 
         let allNews = [];
 
         for (const feed of rssFeeds) {
-            const news = await fetchRSS(feed);
-            allNews = allNews.concat(news);
+            try {
+                const news = await fetchRSS(feed);
+                allNews = allNews.concat(news);
+            } catch (error) {
+                console.error(`Ошибка загрузки RSS: ${feed}`, error);
+            }
         }
 
-        // Сортируем по дате (новые сверху)
         allNews.sort((a, b) => new Date(b.pubDate) - new Date(a.pubDate));
 
-        // Выводим только 5 свежих новостей
+        if (allNews.length === 0) {
+            newsContainer.innerHTML = "<p>Новостей пока нет</p>";
+            return;
+        }
+
         newsContainer.innerHTML = allNews.slice(0, 5).map(item => `
             <div class="news-item">
                 <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
-                <p>${item.description.substring(0, 150)}...</p>
+                <p>${item.description ? item.description.substring(0, 150) + "..." : ""}</p>
                 <small>${new Date(item.pubDate).toLocaleString()}</small>
             </div>
         `).join("");
