--- a/index.html
+++ b/index.html
@@ -635,9 +635,23 @@
 </script>
 <script>
     async function fetchRSS(url) {
-        const response = await fetch(`https://rss-bridge.org/bridge/?action=display&bridge=RssBridge&format=Json&url=${encodeURIComponent(url)}`);
-        const data = await response.json();
-        return data.items || [];
+        try {
+            const response = await fetch(`https://api.allorigins.win/get?url=${encodeURIComponent(url)}`);
+            const data = await response.json();
+            const parser = new DOMParser();
+            const xml = parser.parseFromString(data.contents, "application/xml");
+            const items = xml.querySelectorAll("item");
+
+            return Array.from(items).map(item => ({
+                title: item.querySelector("title").textContent,
+                link: item.querySelector("link").textContent,
+                pubDate: item.querySelector("pubDate") ? item.querySelector("pubDate").textContent : "",
+                description: item.querySelector("description") ? item.querySelector("description").textContent : "",
+            }));
+        } catch (error) {
+            console.error(`Ошибка загрузки RSS: ${url}`, error);
+            return [];
+        }
     }
 
     async function loadNews() {
@@ -645,20 +659,16 @@
         newsContainer.innerHTML = "<p>Загружаем...</p>";
 
         const rssFeeds = [
-            "https://ria.ru/export/rss2/defense.xml",  
-            "https://www.sport-express.ru/services/materials/news/se/sections/edinoborstva.xml",  
-            "https://lenta.ru/rss/articles/army/"
+            "https://russian.rt.com/rss/news/section/25",  // Военные новости (RT)
+            "https://news.sportbox.ru/Vidy_sporta/rss2.xml",  // Новости спорта (Спортбокс)
+            "https://lenta.ru/rss/news"  // Общие новости (Lenta.ru)
         ];
 
         let allNews = [];
 
         for (const feed of rssFeeds) {
-            try {
-                const news = await fetchRSS(feed);
-                allNews = allNews.concat(news);
-            } catch (error) {
-                console.error(`Ошибка загрузки RSS: ${feed}`, error);
-            }
+            const news = await fetchRSS(feed);
+            allNews = allNews.concat(news);
         }
 
         allNews.sort((a, b) => new Date(b.pubDate) - new Date(a.pubDate));
@@ -671,7 +681,7 @@
         newsContainer.innerHTML = allNews.slice(0, 5).map(item => `
             <div class="news-item">
                 <h3><a href="${item.link}" target="_blank">${item.title}</a></h3>
-                <p>${item.description ? item.description.substring(0, 150) + "..." : ""}</p>
+                <p>${item.description.substring(0, 150)}...</p>
                 <small>${new Date(item.pubDate).toLocaleString()}</small>
             </div>
         `).join("");
