--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
 
         const rssFeeds = [
             "https://russian.rt.com/rss/news/section/25",  // Военные новости (RT)
-            "https://news.sportbox.ru/Vidy_sporta/rss2.xml",  // Новости спорта (Спортбокс)
+            "https://www.sport-express.ru/services/materials/news/se/",  // Новости спорта (Спортбокс)
             "https://lenta.ru/rss/news"  // Общие новости (Lenta.ru)
         ];
 
