--- a/index.html
+++ b/index.html
@@ -659,9 +659,9 @@
         newsContainer.innerHTML = "<p>Загружаем...</p>";
 
         const rssFeeds = [
-            "https://russian.rt.com/rss/news/section/25",  // Военные новости (RT)
-            "https://www.sport-express.ru/services/materials/news/se/",  // Новости спорта (Спортбокс)
-            "https://lenta.ru/rss/news"  // Общие новости (Lenta.ru)
+            "https://ria.ru/export/rss2/archive/index.xml",  // риа
+            "https://www.sport-express.ru/services/materials/news/se/",  // Спорт экспресс
+            "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
         ];
 
         let allNews = [];
