--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         style="max-width: 120px"
                         data-param-id="4"
                         data-param-type="image"
-                                                  src="эмблема_бокс.jpg"
+                                                  src="эмба_бкса.jpg"
                                                 alt="" /></a>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
@@ -161,7 +161,7 @@
       <!-- /section -->
       <section class="wrapper bg-dark">
         <div class="container pt-14 pt-md-16 pb-9 pb-md-11">
-          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="эмблема_бокс.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
+          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="эмба_бкса.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
         </div>
         <!-- /.container -->
       </section>
