--- a/index.html
+++ b/index.html
@@ -659,9 +659,12 @@
         newsContainer.innerHTML = "<p>Загружаем...</p>";
 
         const rssFeeds = [
-            "https://ria.ru/export/rss2/archive/index.xml",  // риа
-            "https://www.sport-express.ru/services/materials/news/se/",  // Спорт экспресс
-            "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
+           // "https://ria.ru/export/rss2/archive/index.xml",  // риа
+           // "https://www.sport-express.ru/services/materials/news/se/",  // Спорт экспресс
+           // "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
+              "https://www.boxingnews24.com/feed/", //Boxing News 24
+	      "https://boxingnewsonline.net/feed/", //Boxing News Online
+              "proboxing-fans.com/feed" //Pro Boxing Fans
         ];
 
         let allNews = [];
