--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
            // "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
               "https://www.boxingnews24.com/feed/", //Boxing News 24
 	      "https://boxingnewsonline.net/feed/", //Boxing News Online
-              "proboxing-fans.com/feed" //Pro Boxing Fans
+              "https://www.proboxing-fans.com/feed/" //Pro Boxing Fans
         ];
 
         let allNews = [];
