--- a/index.html
+++ b/index.html
@@ -662,9 +662,9 @@
            // "https://ria.ru/export/rss2/archive/index.xml",  // риа
            // "https://www.sport-express.ru/services/materials/news/se/",  // Спорт экспресс
            // "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
-              "https://www.boxingnews24.com/feed/", //Boxing News 24
-	      "https://boxingnewsonline.net/feed/", //Boxing News Online
-              "https://www.proboxing-fans.com/feed/" //Pro Boxing Fans
+           //  "https://www.boxingnews24.com/feed/", //Boxing News 24
+	   //"https://boxingnewsonline.net/feed/", //Boxing News Online
+              "https://feeds.feedburner.com/ProBoxingFans" //Pro Boxing Fans
         ];
 
         let allNews = [];
