--- a/index.html
+++ b/index.html
@@ -662,8 +662,7 @@
            // "https://ria.ru/export/rss2/archive/index.xml",  // риа
            // "https://www.sport-express.ru/services/materials/news/se/",  // Спорт экспресс
            // "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
-           //  "https://www.boxingnews24.com/feed/", //Boxing News 24
-	   //"https://boxingnewsonline.net/feed/", //Boxing News Online
+              "https://allboxing.ru/atom.xml", //AllBoxing.ru
               "https://feeds.feedburner.com/ProBoxingFans" //Pro Boxing Fans
         ];
 
