--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         style="max-width: 120px"
                         data-param-id="4"
                         data-param-type="image"
-                                                  src="эмба_бкса.jpg"
+                                                  src="фон4.jpg"
                                                 alt="" /></a>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
@@ -663,7 +663,8 @@
            // "https://www.sport-express.ru/services/materials/news/se/",  // Спорт экспресс
            // "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
               "https://allboxing.ru/atom.xml", //AllBoxing.ru
-              "https://feeds.feedburner.com/ProBoxingFans" //Pro Boxing Fans
+              "https://feeds.feedburner.com/ProBoxingFans", //Pro Boxing Fans
+	      "https://www.sport.ru/rssfeeds/boxing.rss" //Sport.ru
         ];
 
         let allNews = [];
