--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
            // "https://www.sport-express.ru/services/materials/news/se/",  // Спорт экспресс
            // "https://lenta.ru/rss"  // Общие новости (Lenta.ru)
               "https://allboxing.ru/atom.xml", //AllBoxing.ru
-              "https://feeds.feedburner.com/ProBoxingFans", //Pro Boxing Fans
+              "https://function.mil.ru/rss_feeds/reference_to_general.htm?contenttype=xml", //вдв
 	      "https://www.sport.ru/rssfeeds/boxing.rss" //Sport.ru
         ];
 
