--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         style="max-width: 120px"
                         data-param-id="4"
                         data-param-type="image"
-                                                  src="фон4.jpg"
+                                                  src="IMG-20250227-WA0108.jpg"
                                                 alt="" /></a>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
@@ -161,7 +161,7 @@
       <!-- /section -->
       <section class="wrapper bg-dark">
         <div class="container pt-14 pt-md-16 pb-9 pb-md-11">
-          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="фон4.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
+          <figure class="rounded mt-md-n21 mt-lg-n23 mb-14" data-cue="slideInDown" data-delay="900"><img src="IMG-20250227-WA0108.jpg" data-param-id="30" data-param-type="image"  alt="" /></figure>
         </div>
         <!-- /.container -->
       </section>
@@ -529,7 +529,7 @@
                          data-param-type="image"
                                                     src="цветспарашютом.jpg"
                                                  alt=""/>
-                                                 <p class="mb-4">Made by War_on_in .</p>
+                                                 <p class="mb-4">Made by Waronin .</p>
                     <nav class="nav social social-white">
                                                                                                                         
                                                                                             </nav>
