--- a/index.html
+++ b/index.html
@@ -186,15 +186,13 @@
             <!--/column -->
             <div class="col-lg-6">
               
-              <p class="lead fs-lg" data-param-id="12" data-param-type="text">Клуб десантников: спорт, патриотизм, единство</p>
-              <p data-param-id="13" data-param-type="text">Наш клуб - спортивно-патриотическое сообщество ветеранов и молодых десантников.</p>
-              <a href="#contact" class="btn btn-primary rounded-pill mt-2" data-param-id="128" data-param-type="text">Подробнее</a>
-            </div>
-            <!--/column -->
-          </div>
-          <!-- /.row -->
-          <div class="row gx-md-8 gx-xl-12 mt-10 mt-md-13">
-            <div class="col-lg-4">
+             <p class="lead fs-lg" data-param-id="12" data-param-type="text">Спортивно-патриотический клуб "ПРАЙД": сила, честь, единство</p>
+             <p data-param-id="13" data-param-type="text">
+             АНО «СПК ПРАЙД» – это объединение ветеранов и молодых десантников, направленное на физическое, интеллектуальное и духовное развитие молодежи.  
+            Мы воспитываем силу духа, патриотизм и готовим подрастающее поколение к службе в Воздушно-десантных войсках России, прививая любовь к истории и традициям нашей Родины.
+            </p>
+<a href="#contact" class="btn btn-primary rounded-pill mt-2" data-param-id="128" data-param-type="text">Подробнее</a>
+
               
               <p data-param-id="53" data-param-type="text">ВСТУПАЯ В НАШ КЛУБ, ТЫ ПОЛУЧИШЬ:</p>
             </div>
