--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="#" data-param-id="71" data-param-type="text">Главная</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about" data-param-id="73" data-param-type="text">О нас</a></li>
-                <li class="nav-item"><a class="nav-link" href="#facts" data-param-id="74" data-param-type="text">Новости</a></li>
+                <li class="nav-item"><a class="nav-link" href="#news" data-param-id="74" data-param-type="text">Новости</a></li>
                 <li class="nav-item"><a class="nav-link" href="programs.html" data-param-id="72" data-param-type="text">Программы</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
               </ul>
@@ -553,9 +553,9 @@
                     <h4 class="widget-title text-white mb-3">&nbsp;</h4>
                     <ul class="list-unstyled  mb-0">
                         <li class="nav-item"><a class="nav-link" href="#" data-param-id="71" data-param-type="text">Главная</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#features" data-param-id="72" data-param-type="text">Программы</a></li>
+                        <li class="nav-item"><a class="nav-link" href="programs.html" data-param-id="72" data-param-type="text">Программы</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about" data-param-id="73" data-param-type="text">О нас</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#facts" data-param-id="74" data-param-type="text">Новости</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#news" data-param-id="74" data-param-type="text">Новости</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact" data-param-id="75" data-param-type="text">Контакты</a></li>
                     </ul>
                 </div>
